[build-system]
requires = ["setuptools>=62", "wheel"]
build-backend = "setuptools.build_meta"

# project metadata
[project]
name = "docutils"
version = "0.19b.dev"
description = "Docutils -- Python Documentation Utilities"
readme.text = """
Docutils is a modular system for processing documentation
into useful formats, such as HTML, XML, and LaTeX.  For
input Docutils supports reStructuredText, an easy-to-read,
what-you-see-is-what-you-get plaintext markup syntax."""  # wrap at col 60
readme.content-type = "text/plain"
urls.Homepage = "https://docutils.sourceforge.io"
license.text = "public domain, Python, 2-Clause BSD, GPL 3 (see COPYING.txt)"
requires-python = ">=3.7"

# Classifiers list: https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Other Audience",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: Public Domain",
    "License :: OSI Approved :: Python Software Foundation License",
    "License :: OSI Approved :: BSD License",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing",
    "Natural Language :: English",  # main/default language, keep first
    "Natural Language :: Afrikaans",
    "Natural Language :: Arabic",
    "Natural Language :: Catalan",
    "Natural Language :: Chinese (Simplified)",
    "Natural Language :: Chinese (Traditional)",
    "Natural Language :: Czech",
    "Natural Language :: Danish",
    "Natural Language :: Dutch",
    "Natural Language :: Esperanto",
    "Natural Language :: Finnish",
    "Natural Language :: French",
    "Natural Language :: Galician",
    "Natural Language :: German",
    "Natural Language :: Hebrew",
    "Natural Language :: Italian",
    "Natural Language :: Japanese",
    "Natural Language :: Korean",
    "Natural Language :: Latvian",
    "Natural Language :: Lithuanian",
    "Natural Language :: Persian",
    "Natural Language :: Polish",
    "Natural Language :: Portuguese (Brazilian)",
    "Natural Language :: Russian",
    "Natural Language :: Slovak",
    "Natural Language :: Spanish",
    "Natural Language :: Swedish",
]

[[project.authors]]
name = "David Goodger"
email = "goodger@python.org"

[[project.maintainers]]
name = "docutils-develop list"
email = "docutils-develop@lists.sourceforge.net"

[tool.setuptools]
platforms = ["OS-independent"]
include-package-data = true
exclude-package-data = {"*" = ["docutils.conf"]}
script-files = [
    "tools/rst2html.py",
    "tools/rst2html4.py",
    "tools/rst2html5.py",
    "tools/rst2s5.py",
    "tools/rst2latex.py",
    "tools/rst2xetex.py",
    "tools/rst2man.py",
    "tools/rst2xml.py",
    "tools/rst2pseudoxml.py",
    "tools/rstpep2html.py",
    "tools/rst2odt.py",
    "tools/rst2odt_prepstyles.py",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["docutils*"]
namespaces = false
