# Build system requirements.
[build-system]
requires = ["flit_core>=3.6"]
build-backend = "flit_core.buildapi"

# project metadata
[project]
name = "docutils"
version = "0.19b.dev"
description = "Docutils -- Python Documentation Utilities"
readme.text = """
Docutils is a modular system for processing documentation
into useful formats, such as HTML, XML, and LaTeX.  For
input Docutils supports reStructuredText, an easy-to-read,
what-you-see-is-what-you-get plaintext markup syntax."""  # wrap at col 60
readme.content-type = "text/plain"
urls.Homepage = "https://docutils.sourceforge.io"
license.file = "COPYING.txt"
requires-python = ">=3.7"

# Classifiers list: https://pypi.org/classifiers/
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Console',
    'Intended Audience :: End Users/Desktop',
    'Intended Audience :: Other Audience',
    'Intended Audience :: Developers',
    'Intended Audience :: System Administrators',
    'License :: Public Domain',
    'License :: OSI Approved :: Python Software Foundation License',
    'License :: OSI Approved :: BSD License',
    'License :: OSI Approved :: GNU General Public License (GPL)',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Topic :: Documentation',
    'Topic :: Software Development :: Documentation',
    'Topic :: Text Processing',
    'Natural Language :: English',  # main/default language, keep first
    'Natural Language :: Afrikaans',
    'Natural Language :: Arabic',
    'Natural Language :: Catalan',
    'Natural Language :: Chinese (Simplified)',
    'Natural Language :: Chinese (Traditional)',
    'Natural Language :: Czech',
    'Natural Language :: Danish',
    'Natural Language :: Dutch',
    'Natural Language :: Esperanto',
    'Natural Language :: Finnish',
    'Natural Language :: French',
    'Natural Language :: Galician',
    'Natural Language :: German',
    'Natural Language :: Hebrew',
    'Natural Language :: Italian',
    'Natural Language :: Japanese',
    'Natural Language :: Korean',
    'Natural Language :: Latvian',
    'Natural Language :: Lithuanian',
    'Natural Language :: Persian',
    'Natural Language :: Polish',
    'Natural Language :: Portuguese (Brazilian)',
    'Natural Language :: Russian',
    'Natural Language :: Slovak',
    'Natural Language :: Spanish',
    'Natural Language :: Swedish',
]

[[project.authors]]
name = "David Goodger"
email = "goodger@python.org"

[[project.maintainers]]
name = "docutils-develop list"
email = "docutils-develop@lists.sourceforge.net"

[project.scripts]
docutils-cli = "docutils._cli:_publish"

# rst
"rst2html.py" = "docutils._cli:publish_html"
"rst2html4.py" = "docutils._cli:publish_html4"
"rst2html5.py" = "docutils._cli:publish_html5"

# TeX
"rst2latex.py" = "docutils._cli:publish_latex"
"rst2xetex.py" = "docutils._cli:publish_xetex"

# XML
"rst2xml.py" = "docutils._cli:publish_xml"
"rst2pseudoxml.py" = "docutils._cli:publish_pseudo_xml"

# misc
"rst2man.py" = "docutils._cli:publish_man"
"rstpep2html.py" = "docutils._cli:publish_pep"
"rst2s5.py" = "docutils._cli:publish_s5"

[tool.flit.sdist]
include = [
    "*.txt",
    "docutils/",
    "docs/",
    "licenses/",
    "test/",
    "tools/",
]
exclude = [
    "*.pyc",
    "*~",
    "__pycache__/",
    ".DS_Store",
    "docutils.conf",
    "test/alltests.out",
    "test/record.txt",
    "test/functional/output",
]
